Add `proj-data` RPM to containers where it's manually installed.

--- a/docker/el9/Dockerfile.rpmbuild-libgeotiff
+++ b/docker/el9/Dockerfile.rpmbuild-libgeotiff
@@ -8,6 +8,7 @@ ARG proj_version
 
 COPY RPMS/x86_64/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm \
+     RPMS/noarch/proj-data-${proj_version}${RPMBUILD_DIST}.noarch.rpm \
      RPMS/noarch/proj-data-at-${proj_version}${RPMBUILD_DIST}.noarch.rpm \
      RPMS/noarch/proj-data-au-${proj_version}${RPMBUILD_DIST}.noarch.rpm \
      RPMS/noarch/proj-data-be-${proj_version}${RPMBUILD_DIST}.noarch.rpm \
@@ -47,6 +48,7 @@ RUN --mount=type=cache,target=/var/cache/dnf \
     dnf install -y \
     "/tmp/proj-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
     "/tmp/proj-devel-${proj_version}${RPMBUILD_DIST}.x86_64.rpm" \
+    "/tmp/proj-data-${proj_version}${RPMBUILD_DIST}.noarch.rpm" \
     "/tmp/proj-data-at-${proj_version}${RPMBUILD_DIST}.noarch.rpm" \
     "/tmp/proj-data-au-${proj_version}${RPMBUILD_DIST}.noarch.rpm" \
     "/tmp/proj-data-be-${proj_version}${RPMBUILD_DIST}.noarch.rpm" \
