Revert libpqxx removal

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -61,6 +61,7 @@ jobs:
           - iniparser
           - journald-cloudwatch-logs
           - libosmium
+          - libpqxx
           - mapnik
           - mapserver
           - openstreetmap-carto
