--- a/Makefile.el9
+++ b/Makefile.el9
@@ -50,6 +50,7 @@ INIPARSER_RPM := $(call rpm_file,iniparser)
 JOURNALD_CLOUDWATCH_LOGS_RPM := $(call rpm_file,journald-cloudwatch-logs)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff)
 LIBOSMIUM_RPM := $(call rpm_file,libosmium)
+LIBPQXX_RPM := $(call rpm_file,libpqxx)
 MAPNIK_RPM := $(call rpm_file,mapnik)
 MAPSERVER_RPM := $(call rpm_file,mapserver)
 OPENSTREETMAP_CARTO_RPM := $(call rpm_file,openstreetmap-carto)
@@ -90,6 +91,7 @@ RPMBUILD_RPMS := \
 	journald-cloudwatch-logs \
 	libgeotiff \
 	libosmium \
+	libpqxx \
 	mapnik \
 	mapserver \
 	openstreetmap-carto \
@@ -152,6 +154,7 @@ distclean: .env
 	echo RPMBUILD_JOURNALD_CLOUDWATCH_LOGS_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/journald-cloudwatch-logs.spec) >> .env
 	echo RPMBUILD_LIBGEOTIFF_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libgeotiff.spec) >> .env
 	echo RPMBUILD_LIBOSMIUM_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libosmium.spec) >> .env
+	echo RPMBUILD_LIBPQXX_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libpqxx.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_MAPNIK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapnik.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_MAPSERVER_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapserver.spec) >> .env
 	echo RPMBUILD_OPENSTREETMAP_CARTO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/openstreetmap-carto.spec) >> .env
@@ -207,6 +210,7 @@ journald-cloudwatch-logs: $(JOURNALD_CLOUDWATCH_LOGS_RPM)
 libgeotiff: $(PROJ_RPM) \
             $(LIBGEOTIFF_RPM)
 libosmium: $(LIBOSMIUM_RPM)
+libpqxx: $(LIBPQXX_RPM)
 mapnik: $(MAPNIK_RPM)
 mapserver: $(MAPSERVER_RPM)
 openstreetmap-carto: $(OPENSTREETMAP_CARTO_RPM)
