--- a/Makefile.el9
+++ b/Makefile.el9
@@ -40,7 +40,6 @@ RPMBUILD_GID := $(shell id -g)
 
 # RPM files at desired versions.
 ARMADILLO_RPM := $(call rpm_file,armadillo)
-ARPACK_RPM := $(call rpm_file,arpack)
 CGAL_RPM := $(call rpm_file,CGAL)
 DUMB_INIT_RPM := $(call rpm_file,dumb-init)
 FILEGDBAPI_RPM := $(call rpm_file,FileGDBAPI)
@@ -50,13 +49,10 @@ GEOS_RPM := $(call rpm_file,geos)
 INIPARSER_RPM := $(call rpm_file,iniparser)
 JOURNALD_CLOUDWATCH_LOGS_RPM := $(call rpm_file,journald-cloudwatch-logs)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff)
-LIBGTA_RPM := $(call rpm_file,libgta)
-LIBKML_RPM := $(call rpm_file,libkml)
 LIBOSMIUM_RPM := $(call rpm_file,libosmium)
 LIBPQXX_RPM := $(call rpm_file,libpqxx)
 MAPNIK_RPM := $(call rpm_file,mapnik)
 MAPSERVER_RPM := $(call rpm_file,mapserver)
-OGDI_RPM := $(call rpm_file,ogdi)
 OPENSTREETMAP_CARTO_RPM := $(call rpm_file,openstreetmap-carto)
 OSM2PGSQL_RPM := $(call rpm_file,osm2pgsql)
 OSMCTOOLS_RPM := $(call rpm_file,osmctools)
@@ -69,7 +65,6 @@ PROJ_RPM := $(call rpm_file,proj)
 PROTOZERO_RPM := $(call rpm_file,protozero)
 PYOSMIUM_RPM := $(call rpm_file,python3-osmium)
 PYTHON_MAPNIK_RPM := $(call rpm_file,python3-mapnik)
-RACK_RPM := $(call rpm_file,rubygem-rack)
 RUBYGEM_LIBXML_RUBY_RPM := $(call rpm_file,rubygem-libxml-ruby)
 SBT_RPM := $(call rpm_file,sbt,noarch)
 SFCGAL_RPM := $(call rpm_file,SFCGAL)
@@ -77,7 +72,6 @@ SPAWN_FCGI_RPM := $(call rpm_file,spawn-fcgi)
 SQLITE_PCRE_RPM := $(call rpm_file,sqlite-pcre)
 STEP_CA_RPM := $(call rpm_file,step-ca)
 STEP_CLI_RPM := $(call rpm_file,step-cli)
-URIPARSER_RPM := $(call rpm_file,uriparser)
 WALG_RPM := $(call rpm_file,wal-g)
 
 # Build images and RPMs.
@@ -87,7 +81,6 @@ RPMBUILD_BASE_IMAGES := \
 	rpmbuild-pgdg
 RPMBUILD_RPMS := \
 	armadillo \
-	arpack \
 	CGAL \
 	dumb-init \
 	FileGDBAPI \
@@ -97,13 +90,10 @@ RPMBUILD_RPMS := \
 	iniparser \
 	journald-cloudwatch-logs \
 	libgeotiff \
-	libgta \
-	libkml \
 	libosmium \
 	libpqxx \
 	mapnik \
 	mapserver \
-	ogdi \
 	openstreetmap-carto \
 	osm2pgsql \
 	osmctools \
@@ -116,7 +106,6 @@ RPMBUILD_RPMS := \
 	protozero \
 	pyosmium \
 	python3-mapnik \
-	rack \
 	rubygem-libxml-ruby \
 	sbt \
 	SFCGAL \
@@ -124,7 +113,6 @@ RPMBUILD_RPMS := \
 	sqlite-pcre \
 	step-ca \
 	step-cli \
-	uriparser \
 	wal-g
 
 
@@ -160,18 +148,15 @@ distclean: .env
 	echo RPMBUILD_GID=$(RPMBUILD_GID) >> .env
 	echo RPMBUILD_UID=$(RPMBUILD_UID) >> .env
 	echo RPMBUILD_ARMADILLO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/armadillo.spec) >> .env
-	echo RPMBUILD_ARPACK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/arpack.spec) >> .env
 	echo RPMBUILD_CGAL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/CGAL.spec) >> .env
 	echo RPMBUILD_G2CLIB_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/g2clib.spec) >> .env
 	echo RPMBUILD_GDAL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/gdal.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_JOURNALD_CLOUDWATCH_LOGS_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/journald-cloudwatch-logs.spec) >> .env
 	echo RPMBUILD_LIBGEOTIFF_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libgeotiff.spec) >> .env
-	echo RPMBUILD_LIBKML_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libkml.spec) >> .env
 	echo RPMBUILD_LIBOSMIUM_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libosmium.spec) >> .env
 	echo RPMBUILD_LIBPQXX_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libpqxx.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_MAPNIK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapnik.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_MAPSERVER_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapserver.spec) >> .env
-	echo RPMBUILD_OGDI_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/ogdi.spec) >> .env
 	echo RPMBUILD_OPENSTREETMAP_CARTO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/openstreetmap-carto.spec) >> .env
 	echo RPMBUILD_OSM2PGSQL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/osm2pgsql.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_OSMCTOOLS_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/osmctools.spec) >> .env
@@ -183,11 +168,9 @@ distclean: .env
 	echo RPMBUILD_PROTOZERO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/protozero.spec) >> .env
 	echo RPMBUILD_PYOSMIUM_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/python3-osmium.spec) >> .env
 	echo RPMBUILD_PYTHON_MAPNIK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/python3-mapnik.spec) >> .env
-	echo RPMBUILD_RACK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/rubygem-rack.spec) >> .env
 	echo RPMBUILD_RUBYGEM_LIBXML_RUBY_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/rubygem-libxml-ruby.spec) >> .env
 	echo RPMBUILD_SFCGAL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/SFCGAL.spec) >> .env
 	echo RPMBUILD_SQLITE_PCRE_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/sqlite-pcre.spec) >> .env
-	echo RPMBUILD_URIPARSER_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/uriparser.spec) >> .env
 	echo RPMBUILD_WALG_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/wal-g.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 
 
@@ -213,29 +196,23 @@ rpmbuild-pgdg: rpmbuild
 
 
 ## RPM targets
-armadillo: $(ARPACK_RPM) \
-           $(ARMADILLO_RPM)
-arpack: $(ARPACK_RPM)
+armadillo: $(ARMADILLO_RPM)
 CGAL: $(CGAL_RPM)
 dumb-init: $(DUMB_INIT_RPM)
 FileGDBAPI: $(FILEGDBAPI_RPM)
 g2clib: $(G2CLIB_RPM)
-gdal: $(ARPACK_RPM) $(CGAL_RPM) $(FILEGDBAPI_RPM) $(GEOS_RPM) $(OGDI_RPM) $(PROJ_RPM) $(URIPARSER_RPM) \
-      $(ARMADILLO_RPM) $(LIBGEOTIFF_RPM) $(LIBKML_RPM) $(SFCGAL_RPM) \
+gdal: $(CGAL_RPM) $(FILEGDBAPI_RPM) $(GEOS_RPM) $(PROJ_RPM) \
+      $(ARMADILLO_RPM) $(LIBGEOTIFF_RPM) $(SFCGAL_RPM) \
       $(GDAL_RPM)
 geos: $(GEOS_RPM)
 iniparser: $(INIPARSER_RPM)
 journald-cloudwatch-logs: $(JOURNALD_CLOUDWATCH_LOGS_RPM)
 libgeotiff: $(PROJ_RPM) \
             $(LIBGEOTIFF_RPM)
-libgta: $(LIBGTA_RPM)
-libkml: $(URIPARSER_RPM) \
-        $(LIBKML_RPM)
 libosmium: $(LIBOSMIUM_RPM)
 libpqxx: $(LIBPQXX_RPM)
 mapnik: $(MAPNIK_RPM)
 mapserver: $(MAPSERVER_RPM)
-ogdi: $(OGDI_RPM)
 openstreetmap-carto: $(OPENSTREETMAP_CARTO_RPM)
 osm2pgsql: $(OSM2PGSQL_RPM)
 osmctools: $(OSMCTOOLS_RPM)
@@ -248,7 +225,6 @@ proj: $(PROJ_RPM)
 protozero: $(PROTOZERO_RPM)
 pyosmium: $(PYOSMIUM_RPM)
 python3-mapnik: $(PYTHON_MAPNIK_RPM)
-rack: $(RACK_RPM)
 rubygem-libxml-ruby: $(RUBYGEM_LIBXML_RUBY_RPM)
 sbt: $(SBT_RPM)
 SFCGAL: $(CGAL_RPM) \
@@ -257,7 +233,6 @@ sqlite-pcre: $(SQLITE_PCRE_RPM)
 spawn-fcgi: $(SPAWN_FCGI_RPM)
 step-ca: $(STEP_CA_RPM)
 step-cli: $(STEP_CLI_RPM)
-uriparser: $(URIPARSER_RPM)
 wal-g: $(WALG_RPM)
 
 
