Adjust gdal target in Makefile.el9, armadillo & g2clib are first-level dependencies

--- a/Makefile.el9
+++ b/Makefile.el9
@@ -198,8 +198,8 @@ armadillo: $(ARMADILLO_RPM)
 CGAL: $(CGAL_RPM)
 FileGDBAPI: $(FILEGDBAPI_RPM)
 g2clib: $(G2CLIB_RPM)
-gdal: $(CGAL_RPM) $(FILEGDBAPI_RPM) $(GEOS_RPM) $(PROJ_RPM) \
-      $(ARMADILLO_RPM) $(LIBGEOTIFF_RPM) $(SFCGAL_RPM) \
+gdal: $(ARMADILLO_RPM) $(CGAL_RPM) $(FILEGDBAPI_RPM) $(G2CLIB_RPM) $(GEOS_RPM) $(PROJ_RPM) \
+      $(LIBGEOTIFF_RPM) $(SFCGAL_RPM) \
       $(GDAL_RPM)
 geos: $(GEOS_RPM)
 iniparser: $(INIPARSER_RPM)
