--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -61,6 +61,7 @@ jobs:
       fail-fast: false
       matrix:
         rpm:
+          - abseil-cpp
           - armadillo
           - CGAL
           - FileGDBAPI
