--- a/docker-compose.el7.yml
+++ b/docker-compose.el7.yml
@@ -30,7 +30,7 @@ x-rpmbuild:
   minimum_versions:
     gdal: &gdal_min_version 3.2.0
     geos: &geos_min_version 3.9.0
-    libosmium: &libosmium_min_version 2.16.0
+    libosmium: &libosmium_min_version 2.17.0
     postgis_min_version: &postgis_min_version 3.1.0
     proj: &proj_min_version 7.2.0
     protobuf-c: &protobuf_c_min_version 1.3.0
@@ -86,7 +86,7 @@ x-rpmbuild:
       version: &libkml_version 1.3.0-1
     libosmium:
       image: rpmbuild-libosmium
-      version: &libosmium_version 2.17.3-1
+      version: &libosmium_version 2.19.0-1
       arch: noarch
       name: libosmium-devel
       defines:
@@ -130,13 +130,13 @@ x-rpmbuild:
       image: rpmbuild-osm2pgsql
       version: &osm2pgsql_version 1.6.0-1
       defines:
-        libosmium_min_version: 2.17.3
+        libosmium_min_version: *libosmium_min_version
         proj_min_version: *proj_min_version
         postgis_min_version: *postgis_min_version
         protobuf_c_min_version: *protobuf_c_min_version
     passenger:
       image: rpmbuild-passenger
-      version: &passenger_version 6.0.15-1
+      version: &passenger_version 6.0.17-1
     postgis:
       image: rpmbuild-postgis
       version: &postgis_version 3.2.4-1
@@ -158,12 +158,12 @@ x-rpmbuild:
       version: &protobuf_version 3.17.3-1
     protobuf-c:
       image: rpmbuild-protobuf-c
-      version: &protobuf-c_version 1.4.0-1
+      version: &protobuf-c_version 1.4.1-1
       defines:
         protobuf_c_min_version: *protobuf_c_min_version
     protozero:
       image: rpmbuild-protozero
-      version: &protozero_version 1.7.0-1
+      version: &protozero_version 1.7.1-1
       arch: noarch
       name: protozero-devel
       defines:
@@ -176,11 +176,11 @@ x-rpmbuild:
         commit: 7da019cf9eb12af8f8aa88b7d75789dfcd1e901b
     python3-osmium:
       image: rpmbuild-pyosmium
-      version: &pyosmium_version 3.5.0-1
+      version: &pyosmium_version 3.6.0-1
       defines:
         libosmium_min_version: *libosmium_min_version
         protozero_min_version: *protozero_min_version
-        pybind11_version: 2.10.1
+        pybind11_version: 2.10.3
     rack:
       image: rpmbuild-rack
       version: &rack_version 2.2.4-1
@@ -219,10 +219,10 @@ x-rpmbuild:
       version: &rubygem_pg_version 1.3.5-1
     rubygem-libxml-ruby:
       image: rpmbuild-rubygem-libxml-ruby
-      version: &rubygem_libxml_ruby_version 3.2.4-1
+      version: &rubygem_libxml_ruby_version 4.0.0-1
     sbt:
       image: rpmbuild-generic
-      version: &sbt_version 1.7.2-1
+      version: &sbt_version 1.8.2-1
       arch: noarch
     sqlite:
       image: rpmbuild-sqlite
