--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -433,6 +433,7 @@ services:
       <<: *build_defaults
       args:
         <<: *build_args_defaults
+        packages: ${RPMBUILD_STEP_CA_PACKAGES}
         rpmbuild_image: rpmbuild-generic
       dockerfile: docker/el9/Dockerfile.rpmbuild-go
   rpmbuild-wal-g:
