Add Caddy RPMs.

--- a/Makefile.el9
+++ b/Makefile.el9
@@ -40,6 +40,7 @@ RPMBUILD_GID := $(shell id -g)
 
 # RPM files at desired versions.
 ARMADILLO_RPM := $(call rpm_file,armadillo)
+CADDY_RPM := $(call rpm_file,caddy)
 CGAL_RPM := $(call rpm_file,CGAL)
 FILEGDBAPI_RPM := $(call rpm_file,FileGDBAPI)
 G2CLIB_RPM := $(call rpm_file,g2clib)
@@ -78,6 +79,7 @@ RPMBUILD_BASE_IMAGES := \
 	rpmbuild-pgdg
 RPMBUILD_RPMS := \
 	armadillo \
+	caddy \
 	CGAL \
 	FileGDBAPI \
 	g2clib \
@@ -193,6 +195,7 @@ rpmbuild-pgdg: rpmbuild
 armadillo: $(ARMADILLO_RPM)
 CGAL: $(CGAL_RPM)
 FileGDBAPI: $(FILEGDBAPI_RPM)
+caddy: $(CADDY_RPM)
 g2clib: $(G2CLIB_RPM)
 gdal: $(ARMADILLO_RPM) $(CGAL_RPM) $(FILEGDBAPI_RPM) $(G2CLIB_RPM) $(GEOS_RPM) $(PROJ_RPM) \
       $(LIBGEOTIFF_RPM) $(SFCGAL_RPM) \
