--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -55,6 +55,9 @@ x-rpmbuild:
     armadillo:
       image: rpmbuild-armadillo
       version: &armadillo_version 12.2.0-1
+    caddy:
+      image: rpmbuild-caddy
+      version: &caddy_version 2.6.4-1
     gdal:
       image: rpmbuild-gdal
       version: &gdal_version 3.6.3-1
@@ -238,6 +241,14 @@ services:
       args:
         <<: *build_args_defaults
         packages: ${RPMBUILD_ARMADILLO_PACKAGES}
+  rpmbuild-caddy:
+    <<: *service_defaults
+    build:
+      <<: *build_defaults
+      args:
+        <<: *build_args_defaults
+        rpmbuild_image: rpmbuild-generic
+      dockerfile: docker/el9/Dockerfile.rpmbuild-go
   rpmbuild-cgal:
     <<: *service_defaults
     build:
