--- a/Makefile.el7
+++ b/Makefile.el7
@@ -39,6 +39,7 @@ RPMBUILD_UID := $(shell id -u)
 RPMBUILD_GID := $(shell id -g)
 
 # RPM files at desired versions.
+CADDY_RPM := $(call rpm_file,caddy)
 CGAL_RPM := $(call rpm_file,CGAL)
 DUMB_INIT_RPM := $(call rpm_file,dumb-init)
 FILEGDBAPI_RPM := $(call rpm_file,FileGDBAPI)
@@ -87,6 +88,7 @@ RPMBUILD_BASE_IMAGES := \
 	rpmbuild-pgdg
 RPMBUILD_RPMS := \
 	CGAL \
+	caddy \
 	dumb-init \
 	FileGDBAPI \
 	gdal \
@@ -214,6 +216,7 @@ rpmbuild-pgdg: rpmbuild
 
 ## RPM targets
 CGAL: $(CGAL_RPM)
+caddy: $(CADDY_RPM)
 dumb-init: $(DUMB_INIT_RPM)
 FileGDBAPI: $(FILEGDBAPI_RPM)
 gdal: $(CGAL_RPM) $(FILEGDBAPI_RPM) $(GEOS_RPM) $(GPSBABEL_RPM) $(LIBKML_RPM) $(OGDI_RPM) $(SQLITE_RPM) \
