Add Caddy to CI workflows.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -62,6 +62,7 @@ jobs:
       matrix:
         rpm:
           - armadillo
+          - caddy
           - CGAL
           - FileGDBAPI
           - g2clib
