--- a/.github/workflows/ci.el7.yml
+++ b/.github/workflows/ci.el7.yml
@@ -62,6 +62,7 @@ jobs:
       fail-fast: false
       matrix:
         rpm:
+          - caddy
           - CGAL
           - dumb-init
           - FileGDBAPI
