--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -27,15 +27,15 @@ x-rpmbuild:
     rpmbuild_image: rpmbuild
   # Use consistent values for minimum versions for RPM build
   # and runtime requirements.
-  minimum_versions:
-    gdal: &gdal_min_version 3.6.0
-    geos: &geos_min_version 3.11.0
-    libosmium: &libosmium_min_version 2.18.0
+  version_limits:
+    gdal_min_version: &gdal_min_version 3.7.0
+    geos_min_version: &geos_min_version 3.11.0
+    libosmium_min_version: &libosmium_min_version 2.18.0
     postgis_min_version: &postgis_min_version 3.3.0
-    proj: &proj_min_version 9.1.0
-    protobuf-c: &protobuf_c_min_version 1.3.0
-    protobuf: &protobuf_min_version 3.0.0
-    protozero: &protozero_min_version 1.7.0
+    proj_min_version: &proj_min_version 9.2.0
+    protobuf-c_min_version: &protobuf_c_min_version 1.3.0
+    protobuf_min_version: &protobuf_min_version 3.0.0
+    protozero_min_version: &protozero_min_version 1.7.0
     sqlite_min_version: &sqlite_min_version 3.11.0
   # Configuration for building every dependency RPM.
   rpms:
@@ -63,7 +63,7 @@ x-rpmbuild:
       version: &gdal_version 3.7.0-1
       defines:
         geos_min_version: *geos_min_version
-        proj_min_version: 9.2.0
+        proj_min_version: *proj_min_version
     geos:
       image: rpmbuild-generic
       version: &geos_version 3.11.2-1
@@ -91,7 +91,7 @@ x-rpmbuild:
       version: &libpqxx_version 7.7.5-1
     mapnik:
       image: rpmbuild-mapnik
-      version: &mapnik_version 3.1.0-1
+      version: &mapnik_version 3.1.0-2
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
@@ -99,7 +99,7 @@ x-rpmbuild:
         proj_min_version: *proj_min_version
     mapserver:
       image: rpmbuild-mapserver
-      version: &mapserver_version 8.0.1-1
+      version: &mapserver_version 8.0.1-2
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
@@ -145,7 +145,7 @@ x-rpmbuild:
       version: &passenger_version 6.0.17-1
     postgis:
       image: rpmbuild-postgis
-      version: &postgis_version 3.3.2-1
+      version: &postgis_version 3.3.3-1
       defines:
         gdal_min_version: *gdal_min_version
         geos_min_version: *geos_min_version
