Add support to build GeoServer packages.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -67,6 +67,8 @@ jobs:
           - FileGDBAPI
           - g2clib
           - geos
+          - geoserver
+          - geoserver-geonode-data
           - journald-cloudwatch-logs
           - libosmium
           - libpqxx
