--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -67,6 +67,18 @@ x-rpmbuild:
     geos:
       image: rpmbuild-generic
       version: &geos_version 3.11.2-1
+    geoserver:
+      arch: noarch
+      defines:
+        gdal_version: *gdal_version
+      image: rpmbuild-generic
+      version: &geoserver_version 2.23.1-1
+    geoserver-geonode-data:
+      arch: noarch
+      defines:
+        gdal_version: *gdal_version
+      image: rpmbuild-generic
+      version: *geoserver_version
     g2clib:
       image: rpmbuild-g2clib
       name: g2clib-devel
