GeoNode's variant of GeoServer requires separate package entirely.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -68,7 +68,7 @@ jobs:
           - g2clib
           - geos
           - geoserver
-          - geoserver-geonode-data
+          - geoserver-geonode
           - journald-cloudwatch-logs
           - libosmium
           - libpqxx
