--- a/Makefile.el9
+++ b/Makefile.el9
@@ -47,7 +47,7 @@ G2CLIB_RPM := $(call rpm_file,g2clib)
 GDAL_RPM := $(call rpm_file,gdal)
 GEOS_RPM := $(call rpm_file,geos)
 GEOSERVER_RPM := $(call rpm_file,geoserver)
-GEOSERVER_GEONODE_DATA_RPM := $(call rpm_file,geoserver-geonode-data)
+GEOSERVER_GEONODE_DATA_RPM := $(call rpm_file,geoserver-geonode)
 JOURNALD_CLOUDWATCH_LOGS_RPM := $(call rpm_file,journald-cloudwatch-logs)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff)
 LIBOSMIUM_RPM := $(call rpm_file,libosmium)
@@ -88,7 +88,7 @@ RPMBUILD_RPMS := \
 	gdal \
 	geos \
 	geoserver \
-	geoserver-geonode-data \
+	geoserver-geonode \
 	journald-cloudwatch-logs \
 	libgeotiff \
 	libosmium \
@@ -206,7 +206,7 @@ gdal: $(ARMADILLO_RPM) $(CGAL_RPM) $(FILEGDBAPI_RPM) $(G2CLIB_RPM) $(GEOS_RPM) $
       $(GDAL_RPM)
 geos: $(GEOS_RPM)
 geoserver: $(GEOSERVER_RPM)
-geoserver-geonode-data: $(GEOSERVER_GEONODE_DATA_RPM)
+geoserver-geonode: $(GEOSERVER_GEONODE_DATA_RPM)
 journald-cloudwatch-logs: $(JOURNALD_CLOUDWATCH_LOGS_RPM)
 libgeotiff: $(PROJ_RPM) \
             $(LIBGEOTIFF_RPM)
