--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -73,7 +73,7 @@ x-rpmbuild:
         gdal_version: *gdal_version
       image: rpmbuild-generic
       version: &geoserver_version 2.23.1-2
-    geoserver-geonode-data:
+    geoserver-geonode:
       arch: noarch
       defines:
         gdal_version: *gdal_version
