--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -72,8 +72,8 @@ x-rpmbuild:
       defines:
         gdal_version: *gdal_version
       image: rpmbuild-generic
-      version: &geoserver_version 2.23.1-1
-    geoserver-geonode-data:
+      version: &geoserver_version 2.23.1-2
+    geoserver-geonode:
       arch: noarch
       defines:
         gdal_version: *gdal_version
