Add support for `osmpbf` on EL9.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -78,6 +78,7 @@ jobs:
           - osm2pgsql
           - osmctools
           - osmdbt
+          - osmpbf
           - osmium-tool
           - osmosis
           - passenger
