Add support for `libosmpbf` (openstreetmap/OSM-binary).

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -71,6 +71,7 @@ jobs:
           - geoserver-geonode
           - journald-cloudwatch-logs
           - libosmium
+          - libosmpbf
           - libpqxx
           - mapnik
           - mapserver
