--- a/docker-compose.el9.yml
+++ b/docker-compose.el9.yml
@@ -98,6 +98,11 @@ x-rpmbuild:
       name: libosmium-devel
       defines:
         protozero_min_version: *protozero_min_version
+    libosmpbf:
+      image: rpmbuild-libosmpbf
+      version: &libosmpbf_version 1.5.0-1
+      defines:
+        protobuf_min_version: *protobuf_min_version
     libpqxx:
       image: rpmbuild-libpqxx
       version: &libpqxx_version 7.8.1-1
@@ -336,6 +341,13 @@ services:
         packages: ${RPMBUILD_JOURNALD_CLOUDWATCH_LOGS_PACKAGES}
         rpmbuild_image: rpmbuild-generic
       dockerfile: docker/el9/Dockerfile.rpmbuild-go
+  rpmbuild-libosmpbf:
+    <<: *service_defaults
+    build:
+      <<: *build_defaults
+      args:
+        <<: *build_args_defaults
+        packages: ${RPMBUILD_LIBOSMPBF_PACKAGES}
   rpmbuild-mapnik:
     <<: *service_defaults
     build:
