Forgot to add `planet-dump-ng` to CI.

--- a/.github/workflows/ci.el9.yml
+++ b/.github/workflows/ci.el9.yml
@@ -82,6 +82,7 @@ jobs:
           - osmium-tool
           - osmosis
           - passenger
+          - planet-dump-ng
           - postgis
           - proj
           - protozero
