--- a/.github/workflows/ci.el7.yml
+++ b/.github/workflows/ci.el7.yml
@@ -72,6 +72,7 @@ jobs:
           - hanazono-fonts
           - journald-cloudwatch-logs
           - libkml
+          - libosmpbf
           - mapnik
           - ogdi
           - openstreetmap-carto
