`planet-dump-ng` and `libosmpbf` on EL7 (#177)
* Add `libosmpbf` support for EL7.

* Add support for `planet-dump-ng` on EL7.

--- a/.github/workflows/ci.el7.yml
+++ b/.github/workflows/ci.el7.yml
@@ -72,6 +72,7 @@ jobs:
           - hanazono-fonts
           - journald-cloudwatch-logs
           - libkml
+          - libosmpbf
           - mapnik
           - ogdi
           - openstreetmap-carto
@@ -81,6 +82,7 @@ jobs:
           - osmium-tool
           - osmosis
           - passenger
+          - planet-dump-ng
           - postgis
           - protobuf
           - pyosmium
