--- a/Makefile.el7
+++ b/Makefile.el7
@@ -52,6 +52,7 @@ JOURNALD_CLOUDWATCH_LOGS_RPM := $(call rpm_file,journald-cloudwatch-logs)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff)
 LIBKML_RPM := $(call rpm_file,libkml)
 LIBOSMIUM_RPM := $(call rpm_file,libosmium)
+LIBOSMPBF_RPM := $(call rpm_file,libosmpbf)
 MAPNIK_RPM := $(call rpm_file,mapnik)
 OGDI_RPM := $(call rpm_file,ogdi)
 OPENSTREETMAP_CARTO_RPM := $(call rpm_file,openstreetmap-carto)
@@ -61,6 +62,7 @@ OSMDBT_RPM := $(call rpm_file,osmdbt)
 OSMIUM_TOOL_RPM := $(call rpm_file,osmium-tool)
 OSMOSIS_RPM := $(call rpm_file,osmosis)
 PASSENGER_RPM := $(call rpm_file,passenger)
+PLANET_DUMP_NG_RPM := $(call rpm_file,planet-dump-ng)
 POSTGIS_RPM := $(call rpm_file,postgis)
 PROJ_RPM := $(call rpm_file,proj)
 PROTOBUF_C_RPM := $(call rpm_file,protobuf-c)
@@ -100,6 +102,7 @@ RPMBUILD_RPMS := \
 	libgeotiff \
 	libkml \
 	libosmium \
+	libosmpbf \
 	mapnik \
 	ogdi \
 	openstreetmap-carto \
@@ -109,6 +112,7 @@ RPMBUILD_RPMS := \
 	osmium-tool \
 	osmosis \
 	passenger \
+	planet-dump-ng \
 	postgis \
 	proj \
 	protobuf \
@@ -167,6 +171,7 @@ distclean: .env
 	echo RPMBUILD_LIBGEOTIFF_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libgeotiff.spec) >> .env
 	echo RPMBUILD_LIBKML_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libkml.spec) >> .env
 	echo RPMBUILD_LIBOSMIUM_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libosmium.spec) >> .env
+	echo RPMBUILD_LIBOSMPBF_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/libosmpbf.spec) >> .env
 	echo RPMBUILD_MAPNIK_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/mapnik.spec) >> .env
 	echo RPMBUILD_OGDI_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/ogdi.spec) >> .env
 	echo RPMBUILD_OPENSTREETMAP_CARTO_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/openstreetmap-carto.spec) >> .env
@@ -175,6 +180,7 @@ distclean: .env
 	echo RPMBUILD_OSMDBT_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/osmdbt.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_OSMIUM_TOOL_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/osmium-tool.spec) >> .env
 	echo RPMBUILD_PASSENGER_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/passenger.spec) >> .env
+	echo RPMBUILD_PLANET_DUMP_NG_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/planet-dump-ng.spec) >> .env
 	echo RPMBUILD_POSTGIS_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/postgis.spec --define postgres_version=$(POSTGRES_VERSION)) >> .env
 	echo RPMBUILD_PROJ_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/proj.spec) >> .env
 	echo RPMBUILD_PROTOBUF_C_PACKAGES=$(shell ./scripts/buildrequires.py SPECS/$(EL_VERSION)/protobuf-c.spec) >> .env
@@ -235,6 +241,7 @@ libkml: $(LIBKML_RPM)
 libosmium: $(PROTOBUF_RPM) \
            $(PROTOZERO_RPM) \
            $(LIBOSMIUM_RPM)
+libosmpbf: $(LIBOSMPBF_RPM)
 mapnik: $(MAPNIK_RPM)
 ogdi: $(OGDI_RPM)
 openstreetmap-carto: $(OPENSTREETMAP_CARTO_RPM)
@@ -244,6 +251,7 @@ osmdbt: $(OSMDBT_RPM)
 osmium-tool: $(OSMIUM_TOOL_RPM)
 osmosis: $(OSMOSIS_RPM)
 passenger: $(PASSENGER_RPM)
+planet-dump-ng: $(PLANET_DUMP_NG_RPM)
 postgis: $(POSTGIS_RPM)
 proj: $(SQLITE_RPM) \
       $(PROJ_RPM)
