--- a/Makefile.el7
+++ b/Makefile.el7
@@ -1,11 +1,11 @@
 ## Conditional variables.
 DOCKER ?= docker
-DOCKER_COMPOSE ?= docker compose
+DOCKER_COMPOSE ?= docker-compose
 EL_VERSION ?= el7
 CI ?= false
 COMPOSE_FILE ?= docker-compose.$(EL_VERSION).yml
 COMPOSE_PROJECT_NAME ?= geoint-deps-$(RPMBUILD_CHANNEL)-$(EL_VERSION)
-IMAGE_PREFIX ?= $(COMPOSE_PROJECT_NAME)-
+IMAGE_PREFIX ?= $(COMPOSE_PROJECT_NAME)_
 
 
 ## Macro functions.
@@ -146,7 +146,7 @@ ifndef DOCKER_VERSION
 	$(error "command docker is not available, please install Docker")
 endif
 ifndef DOCKER_COMPOSE_VERSION
-	$(error "command docker compose is not available, please install the Docker Compose plugin")
+	$(error "command docker-compose is not available, please install docker-compose")
 endif
 
 all-rpms: $(RPMBUILD_RPMS)
@@ -225,7 +225,10 @@ CGAL: $(CGAL_RPM)
 caddy: $(CADDY_RPM)
 dumb-init: $(DUMB_INIT_RPM)
 FileGDBAPI: $(FILEGDBAPI_RPM)
-gdal: $(GDAL_RPM)
+gdal: $(CGAL_RPM) $(FILEGDBAPI_RPM) $(GEOS_RPM) $(GPSBABEL_RPM) $(LIBKML_RPM) $(OGDI_RPM) $(SQLITE_RPM) \
+      $(PROJ_RPM) $(SFCGAL_RPM) \
+      $(LIBGEOTIFF_RPM) \
+      $(GDAL_RPM)
 geos: $(GEOS_RPM)
 google-noto-fonts-extra: rpmbuild-fonts $(GOOGLE_NOTO_RPM)
 gpsbabel: $(GPSBABEL_RPM)
