--- a/docker/el9/Dockerfile.rpmbuild-geoint-pgdg
+++ b/docker/el9/Dockerfile.rpmbuild-geoint-pgdg
@@ -28,7 +28,7 @@ RUN --mount=type=cache,target=/var/cache/dnf \
 # * XXX: Patch out use of clang with invalid options when building bitcode files,
 #   now necessary since PostgreSQL 15.5 development package.
 RUN chown -R "${RPMBUILD_USER}:${RPMBUILD_GROUP}" /var/run/postgresql && \
-    if [ -f /usr/pgsql-15/lib/pgxs/src/Makefile.global ] ; then sed -i -e 's/-Xclang -no-opaque-pointers //g' /usr/pgsql-15/lib/pgxs/src/Makefile.global; fi
+    if [ -f /usr/pgsql-15/lib/pgxs/src/Makefile.global ] ; then sed -i -e 's/-no-opaque-pointers //g' /usr/pgsql-15/lib/pgxs/src/Makefile.global; fi
 
 # Switch back to RPM build user.
 USER ${RPMBUILD_USER}
